--- a/lang/en.json
+++ b/lang/en.json
@@ -27,5 +27,7 @@
     "All categories": "All categories",
     "For fitness clubs": "For fitness clubs",
     "Trainers for home": "Trainers for home",
-    "Name": "Name"
+    "Name": "Name",
+    "Favorite products": "Favorite products",
+    "Favorite": "Favorite"
 }
