--- a/lang/ru.json
+++ b/lang/ru.json
@@ -27,5 +27,7 @@
     "All categories": "Все категории",
     "For fitness clubs": "Для фитнес клубов",
     "Trainers for home": "Тренажеры на дому",
-    "Name": "Название"
+    "Name": "Название",
+    "Favorite products": "Любимые продукты",
+    "Favorite": "Любимые"
 }
