--- a/lang/uk.json
+++ b/lang/uk.json
@@ -28,5 +28,7 @@
     "All categories": "Всі категорії",
     "For fitness clubs": "Для фітнес клубів",
     "Trainers for home": "Тренажери для дому",
-    "Name": "Назва"
+    "Name": "Назва",
+    "Favorite products": "Улюблені продукти",
+    "Favorite": "Улюблені"
 }
