--- a/lang/en.json
+++ b/lang/en.json
@@ -29,5 +29,6 @@
     "Trainers for home": "Trainers for home",
     "Name": "Name",
     "Favorite products": "Favorite products",
-    "Favorite": "Favorite"
+    "Favorite": "Favorite",
+    "Main page": "Main page"
 }
