--- a/lang/ru.json
+++ b/lang/ru.json
@@ -29,5 +29,6 @@
     "Trainers for home": "Тренажеры на дому",
     "Name": "Название",
     "Favorite products": "Любимые продукты",
-    "Favorite": "Любимые"
+    "Favorite": "Любимые",
+    "Main page": "Главная страница"
 }
