--- a/lang/uk.json
+++ b/lang/uk.json
@@ -30,5 +30,6 @@
     "Trainers for home": "Тренажери для дому",
     "Name": "Назва",
     "Favorite products": "Улюблені продукти",
-    "Favorite": "Улюблені"
+    "Favorite": "Улюблені",
+    "Main page": "Головна сторінка"
 }
