custom render error page 500

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,5 @@
 {
+    "Unfortunately, an internal server error occurred": "Unfortunately, an internal server error occurred",
     "Go back to the main page": "Go back to the main page",
     "Buy": "Buy",
     "Price": "Price",
