--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,4 +1,5 @@
 {
+    "Unfortunately, an internal server error occurred": "К сожалению, произошла внутренняя ошибка сервера",
     "Go back to the main page": "Вернуться на главную",
     "Buy": "Купить",
     "Price": "Цена",
