--- a/lang/uk.json
+++ b/lang/uk.json
@@ -1,4 +1,5 @@
 {
+    "Unfortunately, an internal server error occurred": "На жаль, сталася внутрішня помилка сервера",
     "Go back to the main page": "Повернутися на головну",
     "In basket": "В кошик",
     "Buy": "Купити",
